Fixed some stuff before assessment
Spelling error, some titles in the blog page were too long + added a different font color to the progress bar

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -205,7 +205,7 @@ aside p {
     height: 3.5em;
     background-color: #102864;
     border-radius: 3em;
-    color: #ffffff;
+    color: #ff7ff5;
     font-family: liquify, sans-serif;
     font-weight: bold;
     font-size: larger;
